force-app/main/default/objects/redwing__Acquisition_Rule__c/redwing__Acquisition_Rule__c.object-meta.xml
<CustomObject>
    <label>Acquisition Rule</label>
    <nameField>
        <label>Acquisition Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acquisition Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>