force-app/main/default/objects/redwing__Acquisition_Rule__c/fields/redwing__Acquisition__c.field-meta.xml
<CustomField>
    <fullName>redwing__Acquisition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquisition</label>
    <referenceTo>redwing__Acquisition__c</referenceTo>
    <relationshipLabel>Acquisition Rules</relationshipLabel>
    <relationshipName>Acquisition_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>