force-app/main/default/objects/redwing__Acquisition_Rule__c/fields/redwing__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Date__c</fullName>
    <inlineHelpText>Date used for the Fixed Date option in the Expiration Term Basis Field.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>