force-app/main/default/objects/redwing__Acquisition_Rule__c/fields/redwing__Expiration_Term__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Term__c</fullName>
    <inlineHelpText>Number of days/weeks/months/years for expiration.</inlineHelpText>
    <label>Expiration Term</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>