force-app/main/default/objects/redwing__Acquisition_Rule__c/fields/redwing__Expiration_Term_Basis__c.field-meta.xml
<CustomField>
    <fullName>redwing__Expiration_Term_Basis__c</fullName>
    <inlineHelpText>Specify the term basis for when the acquisition will expire.</inlineHelpText>
    <label>Expiration Term Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Expiration</fullName>
                <default>true</default>
                <label>No Expiration</label>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Weeks</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
            </value>
            <value>
                <fullName>Fixed Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>