force-app/main/default/objects/redwing__Acquisition_Rule__c/fields/redwing__Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status__c</fullName>
    <inlineHelpText>Only Active Acquisition Rules will be available to users.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>